Fixed unresponsive scrollbar on Chrome

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
     Import fonts
 */
 @import url(./fonts/libre-franklin/libre-franklin.css);
-@import url(./fonts/lato/lato.css);
+@import url(./fonts/inconsolata/inconsolata.css);
 @import url(./fonts/cardo/cardo.css);
 
 /*
@@ -128,6 +128,10 @@ a:hover   {color: var(--org); }
 .svg_rl_dropdown {
     text-align: center;
 }
+.svg_rl_y {
+    /* for hacky init. purposes */
+    stroke-width: 0;
+}
 .svg_rl_g_ln {
     fill: none;
     stroke-width: 5px;
@@ -138,16 +142,14 @@ a:hover   {color: var(--org); }
 }
 .svg_hs_bars {
     fill: var(--org);
+    fill-opacity: 0.7;
     stroke: none;
 }
 .axis_text {
     font-size: 1em;
     font-family: 'Inconsolata', sans-serif;
 }
-.svg_rl_y {
-    /* for hacky init. purposes */
-    stroke-width: 0;
-}
+/* Interface CSS tweaks */
 .dropdown {
     border: 1px solid var(--fg4);
     font-size: 1.1em;
@@ -211,37 +213,42 @@ input[type=text] {
 html {
     --thumb_height: 15px;
 }
-.scroller .vertical input[type="range"] {
-    position: absolute;
-    -webkit-appearance: slider-vertical;
-	writing-mode: bt-lr;
-    top: 100px;
-}
 .scroller {
     -webkit-appearance: none;
-    width: 5px;
-    /* height: defined in script.js (!!) */
+    height: 5px;
+    /* width: defined in script.js (!!) */
     background: var(--bg2);
     border-radius: 5px;
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
+    /* this scrollbar is a slider rotated 90 degrees; its height => width and vice versa */
+    transform-origin: left;
+    -webkit-transform:rotate(90deg);
+    -moz-transform:rotate(90deg);
+    -o-transform:rotate(90deg);
+    -ms-transform:rotate(90deg);
+    transform:rotate(90deg); 
+}
+.scroller input[type="range"] {
+    position: absolute;
+    top: 100px;
 }
 .scroller::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 5px;
-    /* height: 15px; */
-    height: var(--thumb_height);
+    height: 5px;
+    /* width: 15px; */
+    width: var(--thumb_height);
     border-radius: 3px; 
     background: var(--org);
     cursor: ns-resize;
 }
 .scroller::-moz-range-thumb {
-    width: 5px;
-    /* height: 15px; */
-    height: var(--thumb_height);
+    height: 5px;
+    /* width: 15px; */
+    width: var(--thumb_height);
     border-radius: 2.5px; 
     background: var(--org);
     cursor: ns-resize;
